--- a/src/popup.html
+++ b/src/popup.html
@@ -4,18 +4,71 @@
   <meta charset="UTF-8">
   <title>Xdebug Switch</title>
   <link rel="stylesheet" href="lib/boostrap/bootstrap.min.css">
+  <link rel="stylesheet" href="lib/fontawesome/all.min.css">
   <style>
     body {
       width: 200px;
       text-align: center;
       padding: 10px;
+      background-color: #f0f4f8;
+      margin: 0;
     }
+    .btn {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 10px auto;
+      padding: 10px 10px 10px 10px;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      color: white;
+      text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+      border: none;
+      width: 100%;
+      transition: all 0.3s ease;
+    }
+    .btn i {
+      margin-right: 8px;
+      font-size: 18px;
+    }
+    #toggleSessionBtn {
+      background-color: #cccccc;
+    }
+
+    #toggleProfilerBtn {
+      background-color: #3498db;
+    }
+
+    #toggleSessionBtn:hover {
+      background-color: #34e085;
+      transform: translateY(-2px);
+      color: #ffffff;
+    }
+    
+    #toggleProfilerBtn:hover {
+      background-color: #4aa8e0;
+      color: #ffffff;
+      transform: translateY(-2px);
+    }
+
+    .btn-off {
+      background-color: #e74c3c !important;
+    }
+
   </style>
 </head>
 <body>
   <div class="container">
-    <h3>Xdebug Switch</h3>
-    <button id="toggleBtn" class="btn btn-secondary">Loading…</button>
+    <h3>Xdebug switch</h3>
+    <button id="toggleSessionBtn" class="btn">
+      <i class="fas fa-bug"></i> Debug
+    </button>
+    <hr />
+    <button id="toggleProfilerBtn" class="btn">
+      <i class="fas fa-clock"></i> Profile
+    </button>
   </div>
   <script src="popup.js"></script>
 </body>
